# ScienceAgentBench

./: pyproject.toml  setup.py
sab/: run_infer.py
sab/evaluation/harness/: docker_build.py  run_evaluation.py
